# influencer_crew

./: .gitignore
influencer_crew/: README.md  pyproject.toml
influencer_crew/src/influencer_crew/: main.py
knowledge/: influencers.py  influencers.txt  stir_info.txt
src/influencer_crew/: apify_scraper.py  auth_state.json  crew.py  main.py  process_influencers.py  scraper.py
src/influencer_crew/config/: agents.yaml  tasks.yaml
src/influencer_crew/tools/: custom_tool.py
