[project]
name = "influencer_crew"
version = "0.1.0"
description = "influencer_crew using crewAI"
authors = [{ name = "Samuel Bechar", email = "sbecharv@gmail.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
influencer_crew = "influencer_crew.main:run"
run_crew = "influencer_crew.main:run"
train = "influencer_crew.main:train"
replay = "influencer_crew.main:replay"
test = "influencer_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
